backendd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: registry.gitlab.com/brand-master-flash/bmf-web/bmf-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
      imagePullSecrets:
      - name: regcred
