backensdsd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: registry.gitlab.com/brand-master-flash/bmf-web/bmf-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
      - name: regcred
