percona2.yml
apiVersion: v1
kind: Service
metadata:
  name: percona
  labels:
    name: percona
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: percona
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: percona
spec:
  serviceName: "percona"
  replicas: 2
  template:
    metadata:
      labels:
        role: percona
        environment: production
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: percona:ps-8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
      volumes:
       - name: config-volume
          configMap:
            name: mysql-config
            optional: true
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: config-volume
          mountPath: /etc/my.cnf.d
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
